# trade-analyzer

./: .gitignore  README.md  app.py  generate_demo_cli.py  generate_demo_tradebook.py  pyproject.toml  requirements.txt  test_all.py
.claude/: settings.local.json
.streamlit/: config.toml
data/demo/: bank_trader_demo.csv  conservative_trader_demo.csv  demo_tradebook.csv  tech_trader_demo.csv
data/sample/: tradebook-SIL558-EQ.csv
src/core/: trade_matcher.py  trade_parser.py
src/data/: multi_source_fetcher.py  price_fetcher.py
src/insights/: insight_generator.py  trading_coach.py
