[project]
name = "trade-analyzer"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.29.0",
    "plotly>=5.0.0",
    "yfinance>=0.2.0",
    "pandas-ta>=0.3.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.1.1",
]

